# Daniel_SEAD

./: .gitignore
Homework_1/Memory_leaks/Report/: memcheck_report.txt
Homework_1/Valgrind Usage/Report/: output_case1.txt  output_case2.txt
Homework_2/OpenMP/src/: makefile  pi_omp_private.c  pi_omp_teams.c  pi_omp_threads.c
Memory leaks/memcheck/: configure.ac
Memory leaks/memcheck/lib/: Makefile  Makefile.am  libmemcheck.c
Memory leaks/memcheck/src/: Makefile  Makefile.am  memcheck.c
Memory_leaks/memcheck/lib/: libmemcheck.c
Memory_leaks/memcheck/src/: memcheck.c
Valgrind Usage/Report/: output_case3.txt  report_case1.txt  report_case2.txt  report_case3.txt
